--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -17,7 +17,7 @@
 	transition: 0.3s ease;
 
 	&:hover {
-		background-color: rgba($color-button, 0.7);
+		background-color: $color-blue;
 	}
 
 	&--white {
