--- a/src/view/blocks/footer.pug
+++ b/src/view/blocks/footer.pug
@@ -16,4 +16,4 @@ footer.footer
 			a.socials__item(href='#', target='_blank')
 				+icon('rutube')(width='13', height='14')
 				span rutube.ru
-		div
+		.footer__empty
