--- a/src/styles/blocks/about.scss
+++ b/src/styles/blocks/about.scss
@@ -10,5 +10,30 @@
 		grid-template-columns: 1.2fr 2fr 1.2fr;
 		gap: 30px;
 		margin-top: 30px;
+
+		@include max(d) {
+			grid-template-columns: 1fr 1fr 1fr;
+		}
+
+		@include max(tl) {
+			grid-template-columns: repeat(2, 1fr);
+		}
+
+		@include max(ti) {
+			grid-template-columns: repeat(1, 1fr);
+			gap: 15px;
+		}
+	}
+
+	&__card {
+		&:last-child {
+			@include max(tl) {
+				grid-column: 1 / span 2;
+			}
+
+			@include max(ti) {
+				grid-column: inherit;
+			}
+		}
 	}
 }
