--- a/src/styles/blocks/chart.scss
+++ b/src/styles/blocks/chart.scss
@@ -15,5 +15,13 @@
 
 	&__item {
 		width: calc(33.3333% - 15px / 3 * 2);
+
+		@include max(tl) {
+			width: calc(50% - 15px / 2);
+		}
+
+		@include max(t) {
+			width: 100%;
+		}
 	}
 }
