--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -2,14 +2,23 @@
 	$parent: &;
 
 	position: relative;
+	z-index: 1;
 	padding: 53px 0 0;
 	background-color: $color-main;
+	overflow: hidden;
 
 	&__container {
+		position: relative;
+		z-index: 1;
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
 		gap: 20px;
+
+		@include max(t) {
+			flex-wrap: wrap;
+			justify-content: center;
+		}
 	}
 
 	&__right {
@@ -18,6 +27,10 @@
 		justify-content: space-between;
 		gap: 20px;
 		width: 45%;
+
+		@include max(ti) {
+			width: auto;
+		}
 	}
 
 	&__logo {
@@ -25,6 +38,42 @@
 
 		&:hover {
 			opacity: 0.7;
+		}
+
+		svg {
+			width: 100%;
+			height: 100%;
+		}
+
+		&--appsec {
+			width: 133px;
+			height: 49px;
+
+			@include max(ti) {
+				width: 106px;
+				height: 39px;
+			}
+		}
+
+		&--stingrey {
+			position: relative;
+			width: 175px;
+			height: 57px;
+
+			@include max(ti) {
+				width: 140px;
+				height: 45px;
+			}
+		}
+
+		&--cnews {
+			width: 103px;
+			height: 20px;
+
+			@include max(ti) {
+				width: 82px;
+				height: 16px;
+			}
 		}
 	}
 }
