--- a/src/styles/blocks/hero.scss
+++ b/src/styles/blocks/hero.scss
@@ -4,12 +4,28 @@
 	color: $white;
 	border-radius: 0 0 10px 10px;
 
+	@include max(ti) {
+		padding: 40px 0 20px;
+	}
+
 	&__container {
 		display: flex;
+
+		@include max(tl) {
+			flex-direction: column;
+		}
 	}
 
 	&__content {
 		max-width: 59.7%;
+
+		@include max(dl) {
+			max-width: 50%;
+		}
+
+		@include max(tl) {
+			max-width: 100%;
+		}
 	}
 
 	&__title-big {
@@ -36,8 +52,16 @@
 	&__text {
 		margin-top: 40px;
 
+		@include max(ti) {
+			margin-top: 20px;
+		}
+
 		p + p {
 			margin-top: 25px;
+
+			@include max(ti) {
+				margin-top: 15px;
+			}
 		}
 	}
 
@@ -46,6 +70,15 @@
 		margin-top: -55px;
 		margin-right: -85px;
 		margin-bottom: -55px;
+
+		@include max(d) {
+			margin-right: 0;
+		}
+
+		@include max(tl) {
+			margin-top: 0;
+			margin-bottom: -70px;
+		}
 
 		&::before,
 		&::after {
@@ -74,6 +107,35 @@
 		picture {
 			position: relative;
 			z-index: 2;
+		}
+
+		img {
+			@include max(tl) {
+				margin: 0 auto;
+			}
+		}
+	}
+
+	&__light {
+		position: absolute;
+		top: -107px;
+		left: -42px;
+		width: 170%;
+		height: 170%;
+
+		@include max(dl) {
+			top: -21px;
+    		left: -37px;
+			transform: rotate(12deg);
+		}
+
+		@include max(tl) {
+			display: none;
+		}
+
+		svg {
+			width: 100%;
+			height: 100%;
 		}
 	}
 }
