--- a/src/styles/blocks/products.scss
+++ b/src/styles/blocks/products.scss
@@ -1,9 +1,26 @@
 .products {
 	padding: 64px 0 0;
 
+	@include max(ti) {
+		padding: 40px 0 0;
+	}
+
 	&__grid {
 		display: grid;
 		grid-template-columns: repeat(5, 1fr);
 		gap: 16px;
+
+		@include max(tl) {
+			grid-template-columns: repeat(3, 1fr);
+		}
+
+		@include max(ti) {
+			grid-template-columns: repeat(2, 1fr);
+			gap: 10px;
+		}
+
+		@include max(t) {
+			grid-template-columns: repeat(1, 1fr);
+		}
 	}
 }
