--- a/src/styles/blocks/research.scss
+++ b/src/styles/blocks/research.scss
@@ -2,24 +2,54 @@
 	padding: 50px 0 0;
 	color: $white;
 
+	@include max(ti) {
+		padding: 40px 0 0;
+	}
+
 	&__window {
 		position: relative;
 		border-radius: 10px;
 		background-color: $color-main;
 		padding: 70px 0 76px;
+		overflow: hidden;
+
+		@include max(ti) {
+			padding: 40px 0;
+		}
 	}
 
 	&__bg {
 		position: absolute;
-		inset: 0;
-		width: 100%;
-		height: 100%;
+		inset: -5%;
+		width: 110%;
+		height: 110%;
+		pointer-events: none;
+
+		@include max(d) {
+			inset: -36%;
+			width: 170%;
+			height: 170%;
+		}
+
+		@include max(ti) {
+			inset: -82%;
+			width: 200%;
+			height: 200%;
+		}
 	}
 
 	&__container {
 		display: flex;
 		align-items: center;
 		gap: 20px;
+
+		@include max(tl) {
+			align-items: flex-start;
+		}
+
+		@include max(ti) {
+			flex-direction: column;
+		}
 	}
 
 	&__list {
@@ -38,8 +68,23 @@
 	}
 
 	&__image-wrapper {
+		position: relative;
 		max-width: 558px;
 		width: 100%;
 		margin-right: -56px;
+
+		@include max(dl) {
+			margin-right: 0;
+		}
+
+		@include max(ti) {
+			max-width: 100%;
+		}
+
+		img {
+			@include max(ti) {
+				margin: 0 auto;
+			}
+		}
 	}
 }
