--- a/src/styles/blocks/text.scss
+++ b/src/styles/blocks/text.scss
@@ -6,5 +6,10 @@
 		grid-template-columns: repeat(2, 1fr);
 		gap: 40px;
 		max-width: 100%;
+
+		@include max(ti) {
+			grid-template-columns: repeat(1, 1fr);
+			gap: 10px;
+		}
 	}
 }
