--- a/src/styles/base/var.scss
+++ b/src/styles/base/var.scss
@@ -24,3 +24,5 @@ $color-blue: #1f4cca;
 $color-subtitle: #183a9f;
 $color-bullet: #16abff;
 $color-link: #6873f1;
+$color-placeholder: #c4c4c4;
+$color-error: #c40a0a;
