--- a/src/styles/blocks/about.scss
+++ b/src/styles/blocks/about.scss
@@ -1,6 +1,17 @@
 .about {
 	padding: 44px 0 0;
 
+	&__container {
+		position: relative;
+	}
+
+	&__pattern {
+		position: absolute;
+		top: -300px;
+		left: 80%;
+		z-index: -1;
+	}
+
 	&__text {
 		margin-top: 25px;
 	}
