--- a/src/styles/blocks/hystmodal.scss
+++ b/src/styles/blocks/hystmodal.scss
@@ -1,4 +1,26 @@
 .hystmodal {
+	$parent: &;
+
+	&--form {
+		#{$parent} {
+			&__window {
+				max-width: 540px;
+				width: 100%;
+				border-radius: 10px;
+				padding: 40px 27px;
+
+				@include max(t) {
+					padding: 40px 10px;
+				}
+			}
+
+			&__close {
+				top: 6px;
+				right: 6px;
+			}
+		}
+	}
+
 	&__window {
 		max-width: 676px;
 		width: 100%;
