--- a/src/styles/blocks/video.scss
+++ b/src/styles/blocks/video.scss
@@ -2,10 +2,31 @@
 	$parent: &;
 
 	padding: 55px 0 0;
-	overflow: hidden;
 
 	@include max(ti) {
 		padding: 40px 0 0;
+	}
+
+	&__container {
+		position: relative;
+	}
+
+	&__pattern-1 {
+		position: absolute;
+		top: -10%;
+		left: -130px;
+		z-index: -1;
+
+		@include max(ti) {
+			display: none;
+		}
+	}
+
+	&__pattern-2 {
+		position: absolute;
+		top: -10%;
+		left: 90%;
+		z-index: -1;
 	}
 
 	&__text {
@@ -41,6 +62,10 @@
 		transform: translateY(-50%);
 		width: 389px;
 		height: 326px;
+
+		@include max(ti) {
+			display: none;
+		}
 	}
 
 	&__iframe {
